# toy_docker

./: Dockerfile.train  LEARNING_LOG.md  README.md  downloaded_mnist.h5  pyproject.toml
src/ml_toy_repo/: main.py  state.py  trainer.py
