# pyproject.toml
[project]
name = "ml-toy-repo"
version = "0.1.0"
description = "Toy repo for validating cross-platform TensorFlow Docker patterns"
requires-python = "==3.10.*"
dependencies = [
    "fastapi==0.100.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.24.0,<2.0.0",
    "tensorflow==2.15.0; sys_platform == 'linux'",
    "tensorflow-macos==2.13.0; sys_platform == 'darwin'",
    "tensorflow-metal==1.1.0; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_toy_repo"]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]